# promptea

./: Cargo.toml  README.md
examples/: basic.rs
examples/prompts/: arrays.yaml  basic.yaml  nested.yaml  source.yaml
src/: constraints.rs  lib.rs  value.rs
