[package]
name = "promtea"
version = "0.1.0"
edition = "2021"
description = "Structured message input made simple."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15"
dialoguer = "0.10"
serde_json = "1"
regex = "1.7.1"
Inflector = "0.11.4"

indexmap = { version = "1.9.2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_yaml = "0.9"